--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -454,7 +454,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-type="Mugua" data-code="vyGmgr86" target="_blank"><b>木瓜云</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -462,41 +462,32 @@
                                         <dt>资费</dt>
                                                                                 <dd>
                                             <p>
-                                                <label>V2【高级用户】：</label> ¥40.00 /月付。 
-                                                                                                每月 300G 流量; 
-                                                                                                全球10个国家接入; 
-                                                                                                99.99% SLA 保证; 
-                                                                                                1Gbps 带宽保证; 
-                                                                                                3个设备 终端在线; 
-                                                                                                IEPL 国际专线; 
+                                                <label>「包周期」500G流量：</label> ¥ 6/月付。 
+                                                                                                套餐流量：500G; 
+                                                                                                流量重置：订单日; 
+                                                                                                在线设备：限2设备; 
                                                                                             </p>
                                         </dd>
                                                                                 <dd>
                                             <p>
-                                                <label>V1【标准用户】：</label> ¥25.00 /月付。 
-                                                                                                每月 120G 流量; 
-                                                                                                全球10个国家接入; 
-                                                                                                99.99% SLA 保证; 
-                                                                                                1Gbps 带宽保证; 
-                                                                                                1个设备 终端在线; 
-                                                                                                IEPL 国际专线; 
+                                                <label>「包周期」2500G流量：</label> ¥ 10/月付。 
+                                                                                                套餐流量：2500G; 
+                                                                                                流量重置：订单日; 
+                                                                                                在线设备：限2设备; 
                                                                                             </p>
                                         </dd>
                                                                                 <dd>
                                             <p>
-                                                <label>V3【尊享套餐】：</label> ¥60.00 /月付。 
-                                                                                                每月 500G 流量; 
-                                                                                                全球10个国家接入; 
-                                                                                                99.99% SLA 保证; 
-                                                                                                1Gbps 带宽保证; 
-                                                                                                5个设备 终端在线; 
-                                                                                                IEPL 国际专线; 
+                                                <label>「包周期」4000G流量：</label> ¥ 15/月付。 
+                                                                                                套餐流量：4000G; 
+                                                                                                流量重置：订单日; 
+                                                                                                在线设备：限2设备; 
                                                                                             </p>
                                         </dd>
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-type="Mugua" data-code="vyGmgr86" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -566,16 +557,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-4-7-node-share.htm" title="4月7日→20.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">4月7日→20.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-67421.htm" title="动物疫苗多少钱一支啊图片高清视频（动物疫苗的作用）">动物疫苗多少钱一支啊图片高清视频（动物疫苗的作用）</a></li>
-                        <li class="py-2"><a href="/news/article-80085.htm" title="妙三多和猫三联价格是多少（妙三多和猫三联是疫苗的名字吗）">妙三多和猫三联价格是多少（妙三多和猫三联是疫苗的名字吗）</a></li>
-                        <li class="py-2"><a href="/news/article-77332.htm" title="宠物疫苗证明怎么开（宠物接种疫苗证明）">宠物疫苗证明怎么开（宠物接种疫苗证明）</a></li>
+                        <li class="py-2"><a href="/news/article-94582.htm" title="动物疫苗的概念是什么意思 动物疫苗的概念是什么意思啊">动物疫苗的概念是什么意思 动物疫苗的概念是什么意思啊</a></li>
+                        <li class="py-2"><a href="/news/article-76662.htm" title="vue项目 v-for循环数据，鼠标移入移出改变颜色">vue项目 v-for循环数据，鼠标移入移出改变颜色</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-11-clash-node-daily-updates.htm" title="4月11日→22.5M/S|2025年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">4月11日→22.5M/S|2025年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-87174.htm" title="宠物狗粮在哪里买比较好一点（狗粮去哪买比较好）">宠物狗粮在哪里买比较好一点（狗粮去哪买比较好）</a></li>
+                        <li class="py-2"><a href="/news/article-80084.htm" title="狗粮的十大品牌是哪几个品牌（狗粮十大品牌排行榜介绍）">狗粮的十大品牌是哪几个品牌（狗粮十大品牌排行榜介绍）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-14-free-v2ray.htm" title="3月14日→18.5M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">3月14日→18.5M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-69987.htm" title="动物疫苗去哪里买比较好 动物疫苗去哪里买比较好一点">动物疫苗去哪里买比较好 动物疫苗去哪里买比较好一点</a></li>
+                        <li class="py-2"><a href="/news/article-66161.htm" title="vue中的this.$router.replace()和.push()和.go()的区别解析">vue中的this.$router.replace()和.push()和.go()的区别解析</a></li>
+                        <li class="py-2"><a href="/news/article-91593.htm" title="AJAX原理以及axios、fetch区别实例详解_AJAX相关">AJAX原理以及axios、fetch区别实例详解_AJAX相关</a></li>
                         <li class="py-2"><a href="/news/article-80787.htm" title="饲料加盟免费代理多少钱（饲料加盟免费代理多少钱啊）">饲料加盟免费代理多少钱（饲料加盟免费代理多少钱啊）</a></li>
-                        <li class="py-2"><a href="/news/article-82167.htm" title="免费问医生在线24小时咨询妇科（免费问医生 在线咨询）">免费问医生在线24小时咨询妇科（免费问医生 在线咨询）</a></li>
-                        <li class="py-2"><a href="/news/article-79392.htm" title="国内十大猫粮品牌排行榜对比（国内知名猫粮品牌）">国内十大猫粮品牌排行榜对比（国内知名猫粮品牌）</a></li>
-                        <li class="py-2"><a href="/news/article-73288.htm" title="厦门猫咪领养吧 厦门猫咪领养吧百度贴吧">厦门猫咪领养吧 厦门猫咪领养吧百度贴吧</a></li>
-                        <li class="py-2"><a href="/news/article-86466.htm" title="SSM三大框架工作流程与原理详解">SSM三大框架工作流程与原理详解</a></li>
-                        <li class="py-2"><a href="/news/article-90083.htm" title="动物疫苗价格表图片高清大全集视频（动物疫苗接种时间表）">动物疫苗价格表图片高清大全集视频（动物疫苗接种时间表）</a></li>
                     </ul>
     </div>
 </div>
@@ -587,7 +578,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">53</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
