--- a/client.htm
+++ b/client.htm
@@ -292,16 +292,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-87174.htm" title="宠物狗粮在哪里买比较好一点（狗粮去哪买比较好）">宠物狗粮在哪里买比较好一点（狗粮去哪买比较好）</a></li>
-                        <li class="py-2"><a href="/news/article-80085.htm" title="妙三多和猫三联价格是多少（妙三多和猫三联是疫苗的名字吗）">妙三多和猫三联价格是多少（妙三多和猫三联是疫苗的名字吗）</a></li>
-                        <li class="py-2"><a href="/news/article-73956.htm" title="宠物医院社会实践心得（宠物医院实践活动总结）">宠物医院社会实践心得（宠物医院实践活动总结）</a></li>
-                        <li class="py-2"><a href="/news/article-89354.htm" title="宠物粮食加工厂加盟条件要求是什么 宠物粮食加工厂加盟条件要求是什么呢">宠物粮食加工厂加盟条件要求是什么 宠物粮食加工厂加盟条件要求是什么呢</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share.htm" title="3月11日→22.3M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">3月11日→22.3M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-66160.htm" title="Java中的字符串常量池是什么？">Java中的字符串常量池是什么？</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" title="3月28日→18.4M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐">3月28日→18.4M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-8-free-node-subscribe-links.htm" title="3月8日→19.3M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">3月8日→19.3M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-65524.htm" title="隐藏滚动条适用于各个浏览器">隐藏滚动条适用于各个浏览器</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-8-node-share-links.htm" title="4月8日→20.2M/S|2025年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">4月8日→20.2M/S|2025年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-v2ray-subscribe.htm" title="3月17日→21.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">3月17日→21.1M/S|2025年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-75302.htm" title="动物疫苗和人体疫苗的区别是什么呢图片（动物疫苗对人体有害吗）">动物疫苗和人体疫苗的区别是什么呢图片（动物疫苗对人体有害吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-19-free-subscribe-node.htm" title="4月19日→21.5M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">4月19日→21.5M/S|2025年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-75303.htm" title="动物疫苗需要每年都打吗多少钱（动物疫苗需要每年都打吗多少钱）">动物疫苗需要每年都打吗多少钱（动物疫苗需要每年都打吗多少钱）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-4-14-node-share.htm" title="4月14日→21.3M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐">4月14日→21.3M/S|2025年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-93805.htm" title="【Vue.js】兄弟组件之间调用对方的方法">【Vue.js】兄弟组件之间调用对方的方法</a></li>
+                        <li class="py-2"><a href="/news/article-68698.htm" title="宠物医疗许可证多少钱（宠物医疗许可证多少钱办）">宠物医疗许可证多少钱（宠物医疗许可证多少钱办）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-18-shadowrocket-node.htm" title="3月18日→19.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">3月18日→19.9M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-87897.htm" title="JS实现数码时钟">JS实现数码时钟</a></li>
                     </ul>
     </div>
 </div>
@@ -313,7 +313,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">53</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
